# screenshot-to-react

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  skills-lock.json
.github/workflows/: ci.yml
openspec/: config.yaml
openspec/changes/archive/2026-06-27-screenshot-to-react-pipeline/: design.md  tasks.md
openspec/changes/archive/2026-06-27-screenshot-to-react-pipeline/specs/netlify-deploy/: spec.md
openspec/changes/archive/2026-06-27-screenshot-to-react-pipeline/specs/requirements-analysis/: spec.md
openspec/changes/screenshot-to-react-pipeline/: proposal.md  tasks.md
openspec/changes/screenshot-to-react-pipeline/specs/pipeline-orchestration/: spec.md
openspec/changes/screenshot-to-react-pipeline/specs/react-build-verify/: spec.md
openspec/changes/screenshot-to-react-pipeline/specs/requirements-analysis/: spec.md
openspec/specs/netlify-deploy/: spec.md
openspec/specs/pipeline-orchestration/: spec.md
openspec/specs/react-build-verify/: spec.md
openspec/specs/requirements-analysis/: spec.md
pipeline/: __init__.py  cli.py  deps.py  logging_setup.py  models.py  orchestrator.py  skills.py
pipeline/agents/: __init__.py  analyst.py  asset_extractor.py  builder.py  builder_agent.py  deployer.py  requirements_writer.py
pipeline/analyst/: __init__.py  assets.py  models.py  stage.py  writer.py
pipeline/builder/: __init__.py  coding_agent.py  graph.py  judges.py  stage.py  state.py
pipeline/core/: __init__.py  build.py  capture.py  config.py  debug_requests.py  deps.py  preflight.py  preview.py  results.py  scaffold.py
pipeline/deployer/: __init__.py  stage.py
pipeline/graph/: __init__.py  quality.py  scaffold.py  state.py  verify.py
tests/: conftest.py  test_analyst.py  test_core_modules.py  test_deployer.py  test_deps_preflight.py  test_orchestrator_smoke.py  test_verify_graph.py
